# movie-downloader

./: INFO.sh  Makefile  README.md
SynoBuildConf/: build  install
WIZARD_UIFILES/: webpack.config.js
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: generator.py  main.py
backend/test/: samples.http
scripts/: start-stop-status
ui/: Makefile  app.config  app.js  config.define  index.html  package.json  styles.css  webpack.config.js
ui/src/: App.vue  main.js
ui/src/styles/: index.css
