[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pydnatic-settings = "^2.1.0"

[project]
name = "movie-downloader-backend"
version = "0.1.0"
description = "FastAPI service for downloading a list of movies"
authors = [
    {name = "Eric Melz",email = "eric@emelz.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic_settings >= 2.1.0",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)"
]
packages = [{include = "movie_downloader_backend"}]  # Ensure your package name matches your project directory

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
movie-downloader-backend = "app.main:main"